[gd_scene load_steps=8 format=3 uid="uid://bgg55csrwwnid"]

[ext_resource type="Script" path="res://Scenes/Battle/Pause/pause gui.gd" id="1_3rldp"]
[ext_resource type="Texture2D" uid="uid://db5pc6oy3djpm" path="res://2D/GUI/Pause menue/under.png" id="1_qlck0"]
[ext_resource type="Texture2D" uid="uid://b3p4jeor0m7dp" path="res://2D/GUI/Pause menue/over.png" id="2_i6qxu"]
[ext_resource type="Texture2D" uid="uid://cmw1qntophbkj" path="res://2D/GUI/Pause menue/bar.png" id="3_hmfh3"]
[ext_resource type="FontFile" uid="uid://xapgxwb6dcqj" path="res://Font/Ordin-Bold.otf" id="4_n72tc"]
[ext_resource type="Script" path="res://Scenes/Battle/Pause/Arrows.gd" id="6_phc4a"]
[ext_resource type="Theme" uid="uid://bry8ai6aeiieb" path="res://Themes/Button.tres" id="7_f76ud"]

[node name="PAUSE" type="Node2D"]
process_mode = 2
script = ExtResource("1_3rldp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 278.0
offset_top = 92.0
offset_right = 995.0
offset_bottom = 508.0
color = Color(0.337255, 0, 0.717647, 0.364706)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 310.0
offset_top = 117.0
offset_right = 966.0
offset_bottom = 482.0
color = Color(0.231373, 0, 0.509804, 0.266667)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = 335.0
offset_top = 135.0
offset_right = 585.0
offset_bottom = 268.0
theme_override_fonts/font = ExtResource("4_n72tc")
theme_override_font_sizes/font_size = 40
text = "PAUSE"
metadata/_edit_lock_ = true

[node name="Music" type="Node2D" parent="."]
position = Vector2(4, 216)

[node name="MusicVolume" type="TextureProgressBar" parent="Music"]
unique_name_in_owner = true
offset_left = 725.0
offset_top = 155.0
offset_right = 923.0
offset_bottom = 185.0
min_value = -30.0
max_value = -5.0
value = -20.0
nine_patch_stretch = true
texture_under = ExtResource("1_qlck0")
texture_over = ExtResource("2_i6qxu")
texture_progress = ExtResource("3_hmfh3")

[node name="Label2" type="Label" parent="Music"]
offset_left = 734.0
offset_top = 134.0
offset_right = 814.0
offset_bottom = 157.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "music"

[node name="Label3" type="Label" parent="Music"]
offset_left = 363.0
offset_top = 35.0
offset_right = 443.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "walk"

[node name="Label4" type="Label" parent="Music"]
offset_left = 501.0
offset_top = 24.0
offset_right = 581.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "shoot"

[node name="MinMusic" type="Button" parent="Music"]
unique_name_in_owner = true
offset_left = 699.0
offset_top = 154.0
offset_right = 723.0
offset_bottom = 185.0
mouse_filter = 1
text = "-"

[node name="MaxMusic" type="Button" parent="Music"]
unique_name_in_owner = true
offset_left = 924.0
offset_top = 155.0
offset_right = 948.0
offset_bottom = 186.0
mouse_filter = 1
text = "+"

[node name="Music Mute" type="CheckBox" parent="Music"]
unique_name_in_owner = true
offset_left = 859.0
offset_top = 128.0
offset_right = 951.0
offset_bottom = 159.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "MUTE"

[node name="Music2" type="Node2D" parent="."]
position = Vector2(3, 277)

[node name="SFXVolume" type="TextureProgressBar" parent="Music2"]
unique_name_in_owner = true
offset_left = 725.0
offset_top = 155.0
offset_right = 923.0
offset_bottom = 185.0
min_value = -30.0
max_value = -5.0
value = -20.0
nine_patch_stretch = true
texture_under = ExtResource("1_qlck0")
texture_over = ExtResource("2_i6qxu")
texture_progress = ExtResource("3_hmfh3")

[node name="Label2" type="Label" parent="Music2"]
offset_left = 734.0
offset_top = 134.0
offset_right = 814.0
offset_bottom = 157.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "SFX"

[node name="MinSFX" type="Button" parent="Music2"]
unique_name_in_owner = true
offset_left = 699.0
offset_top = 154.0
offset_right = 723.0
offset_bottom = 185.0
mouse_filter = 1
text = "-"

[node name="MaxSFX" type="Button" parent="Music2"]
unique_name_in_owner = true
offset_left = 924.0
offset_top = 155.0
offset_right = 948.0
offset_bottom = 186.0
mouse_filter = 1
text = "+"

[node name="SFX Mute" type="CheckBox" parent="Music2"]
unique_name_in_owner = true
offset_left = 859.0
offset_top = 128.0
offset_right = 951.0
offset_bottom = 159.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "MUTE"

[node name="fullscreen" type="CheckBox" parent="."]
offset_left = 738.0
offset_top = 255.0
offset_right = 926.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "FULL SCREEN"

[node name="Arrows" type="Node2D" parent="."]
script = ExtResource("6_phc4a")

[node name="Left" type="Label" parent="Arrows"]
unique_name_in_owner = true
offset_left = 345.0
offset_top = 368.0
offset_right = 425.0
offset_bottom = 391.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "left"

[node name="Right" type="Label" parent="Arrows"]
unique_name_in_owner = true
offset_left = 346.0
offset_top = 391.0
offset_right = 426.0
offset_bottom = 414.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "right"

[node name="Up" type="Label" parent="Arrows"]
unique_name_in_owner = true
offset_left = 346.0
offset_top = 417.0
offset_right = 426.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "up"

[node name="Down" type="Label" parent="Arrows"]
unique_name_in_owner = true
offset_left = 346.0
offset_top = 442.0
offset_right = 426.0
offset_bottom = 465.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "down"

[node name="Shoot" type="Label" parent="Arrows"]
unique_name_in_owner = true
offset_left = 512.0
offset_top = 393.0
offset_right = 592.0
offset_bottom = 416.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "SHOOT"

[node name="Change" type="Label" parent="Arrows"]
unique_name_in_owner = true
offset_left = 513.0
offset_top = 419.0
offset_right = 593.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "change"

[node name="W" type="Button" parent="Arrows"]
offset_left = 393.0
offset_top = 278.0
offset_right = 417.0
offset_bottom = 309.0
text = "W"

[node name="A" type="Button" parent="Arrows"]
offset_left = 362.0
offset_top = 315.0
offset_right = 386.0
offset_bottom = 346.0
text = "A"

[node name="D" type="Button" parent="Arrows"]
offset_left = 426.0
offset_top = 315.0
offset_right = 450.0
offset_bottom = 346.0
text = "D"

[node name="S" type="Button" parent="Arrows"]
offset_left = 394.0
offset_top = 315.0
offset_right = 418.0
offset_bottom = 346.0
text = "S"

[node name="SHOOT" type="Button" parent="Arrows"]
offset_left = 508.0
offset_top = 263.0
offset_right = 532.0
offset_bottom = 294.0
text = "B"

[node name="Label5" type="Label" parent="Arrows"]
offset_left = 505.0
offset_top = 305.0
offset_right = 597.0
offset_bottom = 328.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "change"

[node name="CHANGE" type="Button" parent="Arrows"]
offset_left = 509.0
offset_top = 335.0
offset_right = 533.0
offset_bottom = 366.0
text = "C"

[node name="SAVE" type="Button" parent="."]
offset_left = 846.0
offset_top = 135.0
offset_right = 925.0
offset_bottom = 168.0
theme = ExtResource("7_f76ud")
text = "SAVE"

[node name="savedtimer" type="Timer" parent="SAVE"]
unique_name_in_owner = true
one_shot = true

[node name="saved" type="Label" parent="SAVE"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 40.0
offset_right = 85.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("4_n72tc")
text = "saved!"

[node name="LOAD" type="Button" parent="."]
offset_left = 763.0
offset_top = 135.0
offset_right = 842.0
offset_bottom = 168.0
theme = ExtResource("7_f76ud")
text = "LOAD"

[connection signal="button_up" from="Music/MinMusic" to="." method="_on_min_music_button_up"]
[connection signal="button_up" from="Music/MaxMusic" to="." method="_on_max_music_button_up"]
[connection signal="button_up" from="Music/Music Mute" to="." method="_on_music_mute_button_up"]
[connection signal="button_up" from="Music2/MinSFX" to="." method="_on_min_sfx_button_up"]
[connection signal="button_up" from="Music2/MaxSFX" to="." method="_on_max_sfx_button_up"]
[connection signal="button_up" from="Music2/SFX Mute" to="." method="_on_sfx_mute_button_up"]
[connection signal="button_up" from="fullscreen" to="." method="_on_fullscreen_button_up"]
[connection signal="button_up" from="Arrows/W" to="Arrows" method="_on_w_button_up"]
[connection signal="button_up" from="Arrows/A" to="Arrows" method="_on_a_button_up"]
[connection signal="button_up" from="Arrows/D" to="Arrows" method="_on_d_button_up"]
[connection signal="button_up" from="Arrows/S" to="Arrows" method="_on_s_button_up"]
[connection signal="button_up" from="Arrows/SHOOT" to="Arrows" method="_on_shoot_button_up"]
[connection signal="button_up" from="Arrows/CHANGE" to="Arrows" method="_on_change_button_up"]
[connection signal="button_up" from="SAVE" to="." method="_on_save_button_up"]
[connection signal="timeout" from="SAVE/savedtimer" to="." method="_on_savedtimer_timeout"]
[connection signal="button_up" from="LOAD" to="." method="_on_load_button_up"]
